# trivial_docker_example

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  dockerize  entrypoint.sh
muxing_between_components/: .gitignore  Makefile  README.md  entrypoint.sh
muxing_between_components/python_package_a/: README.md  pyproject.toml
muxing_between_components/python_package_a/python_package_a/: main.py
muxing_between_components/python_package_b/: pyproject.toml
muxing_between_components/python_package_b/tests/vectors/: people.json
plant_uml/: .dockerignore  Dockerfile  README.md  docker-compose.yml  dockerized_plant_uml.sh  test.puml
plant_uml/shared_volume/: .gitignore
python_package_a/: pyproject.toml
python_package_b/: README.md  pyproject.toml
python_package_b/python_package_b/: main.py
python_package_b/python_package_b/entities/: people.py
shared_volume/: README.md
